--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 ﻿{
     "database": {
         "host": "localhost",
-        "port": 3306,
+        "port": "3306",
         "user": "root",
         "password": "",
         "database": "database-name"
